--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,674 @@
-.cover_video .video {
+#contact_us {
+  padding: 12.5vw 0 8.25vw;
+}
+
+#contact_us .bg {
+  background: #FF981F;
+  padding: 6vw 12vw;
+}
+
+#contact_us .bg .contact_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+}
+
+#contact_us .bg .contact_grid .contact_us_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: bold;
+  font-size: 3vw;
+}
+
+#contact_us .bg .contact_grid a {
+  color: #000;
+}
+
+#contact_us .bg .contact_grid .contact_us_button {
+  font-family: Noto Serif JP;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2vw 0;
+}
+
+#contact_us .bg .contact_grid .contact_us_button .button_text {
+  font-size: 1.5vw;
+}
+
+#contact_us .bg .contact_grid .contact_us_button img {
+  height: 1.25vw;
+  margin-left: 1vw;
+}
+
+@media (max-width: 767.98px) {
+  #contact_us {
+    padding: 16.7vw 0 10.386vw;
+  }
+  #contact_us .bg {
+    padding: 10.6vw 25vw;
+  }
+  #contact_us .bg .contact_grid {
+    -ms-grid-columns: auto;
+        grid-template-columns: auto;
+  }
+  #contact_us .bg .contact_grid .contact_us_title {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-weight: normal;
+    height: 13.5vw;
+    font-size: 5.8vw;
+  }
+  #contact_us .bg .contact_grid a {
+    color: #000;
+  }
+  #contact_us .bg .contact_grid .contact_us_button {
+    font-family: Noto Serif JP;
+    background: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 2vw 0;
+    height: 13.5vw;
+  }
+  #contact_us .bg .contact_grid .contact_us_button .button_text {
+    font-size: 2.9vw;
+  }
+  #contact_us .bg .contact_grid .contact_us_button img {
+    height: 2.75vw;
+    margin-left: 2vw;
+  }
+}
+
+#cover .video {
   pointer-events: none;
 }
 
-.cover_video .video video {
+#cover .video video {
   width: 100%;
+}
+
+#cover .cover_mobile {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  #cover .video {
+    display: none;
+  }
+  #cover .cover_mobile {
+    display: block;
+    position: relative;
+  }
+  #cover .cover_mobile img {
+    width: 100%;
+  }
+  #cover .cover_mobile .cover_message {
+    position: absolute;
+    color: #fff;
+    font-family: Noto Serif JP;
+    font-size: 7.25vw;
+    bottom: 15vw;
+    line-height: 1.5;
+    left: 3vw;
+    text-shadow: 1vw 1vw 1vw rgba(0, 0, 0, 0.44);
+  }
+}
+
+.section_title {
+  text-align: center;
+  font-size: 2.25vw;
+  font-weight: bold;
+  margin-bottom: 1.5vw;
+}
+
+@media (max-width: 767.98px) {
+  .section_title {
+    font-size: 5.8vw;
+  }
+}
+
+.body_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.25vw;
+  font-family: Noto Serif JP;
+  text-align: center;
+}
+
+.body_text p {
+  margin-bottom: 2vw;
+  line-height: 1.5;
+}
+
+@media (max-width: 767.98px) {
+  .body_text {
+    font-size: 3.14vw;
+  }
+  .body_text p {
+    margin-bottom: 5vw;
+  }
+}
+
+.card_shadow {
+  -webkit-box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+}
+
+@media (max-width: 767.98px) {
+  .card_shadow {
+    -webkit-box-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
+            box-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
+  }
+}
+
+#path_to_success {
+  padding-top: 13.5vw;
+}
+
+#path_to_success .grid_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 4.75vw;
+}
+
+#path_to_success .grid_container .path_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-column-gap: 1.75vw;
+          column-gap: 1.75vw;
+  row-gap: 2vw;
+  justify-items: center;
+  width: calc(1.75vw * 2 + 19.25vw * 3);
+}
+
+#path_to_success .grid_container .path_grid .grid_button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #FF981F;
+  text-align: center;
+  font-size: 1.25vw;
+  line-height: 1.4;
+  font-family: Noto Serif JP;
+  height: 6.25vw;
+  width: 19.25vw;
+}
+
+@media (max-width: 767.98px) {
+  #path_to_success {
+    padding-top: 25vw;
+  }
+  #path_to_success .body_text {
+    width: 58% !important;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #path_to_success .grid_container .path_grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 4.6vw;
+            column-gap: 4.6vw;
+    row-gap: 4.6vw;
+    width: calc(4.6vw * 1 + 41.9vw * 2);
+  }
+  #path_to_success .grid_container .path_grid .grid_button {
+    font-size: 2.65vw;
+    line-height: 1.4;
+    font-family: Noto Serif JP;
+    height: 14.25vw;
+    width: 41.9vw;
+  }
+}
+
+#industries {
+  padding: 10vw 0 13.25vw;
+}
+
+#industries .industries_grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+  margin-top: 3vw;
+}
+
+#industries .industries_grid .industry_row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#industries .industries_grid .industry_row .industry_item {
+  position: relative;
+}
+
+#industries .industries_grid .industry_row .industry_item img {
+  width: 100%;
+}
+
+#industries .industries_grid .industry_row .industry_item img.mobile {
+  display: none;
+}
+
+#industries .industries_grid .industry_row .industry_item .filter {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.57);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  line-height: 1.25;
+  font-size: 1.75vw;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+  font-family: Noto Serif JP;
+}
+
+#industries .industries_grid .industry_row .industry_item .filter.mobile {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  #industries {
+    padding-top: 20vw;
+  }
+  #industries .industries_grid {
+    text-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
+    margin-top: 10vw;
+    padding: 0 2.5vw;
+  }
+  #industries .industries_grid .industry_row .industry_item img.mobile {
+    display: block;
+  }
+  #industries .industries_grid .industry_row .industry_item img.desktop {
+    display: none;
+  }
+  #industries .industries_grid .industry_row .industry_item .filter {
+    line-height: 1.25;
+    font-size: 4.35vw;
+    padding: 10%;
+  }
+  #industries .industries_grid .industry_row .industry_item .filter.desktop {
+    display: none;
+  }
+  #industries .industries_grid .industry_row .industry_item .filter.mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  #industries .industries_grid :nth-child(2) :nth-child(1) .filter,
+  #industries .industries_grid :nth-child(2) :nth-child(2) .filter,
+  #industries .industries_grid :nth-child(3) :nth-child(1) .filter {
+    font-size: 3.14vw;
+  }
+}
+
+#service {
+  background: #E9E9E9;
+  padding-top: 2vw;
+}
+
+#service .section_title {
+  margin-bottom: 0.25vw;
+}
+
+#service .body_text p {
+  margin-bottom: 1vw;
+}
+
+#service .service_grid_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 3.75vw 0;
+}
+
+#service .service_grid_container .service_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -webkit-column-gap: 2vw;
+          column-gap: 2vw;
+  row-gap: 3.75vw;
+}
+
+#service .service_grid_container .service_grid .service_card {
+  height: 10.5vw;
+  width: 19.75vw;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#service .service_grid_container .service_grid .service_card .card_pic {
+  background-color: #FF981F;
+  min-width: 4.5vw;
+  height: 4.25vw;
+  margin: 0.875vw;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#service .service_grid_container .service_grid .service_card .card_pic img {
+  width: 50%;
+}
+
+#service .service_grid_container .service_grid .service_card .card_text {
+  width: calc(100% - 9vw);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-weight: bold;
+  font-family: Noto Serif JP;
+  font-size: 1vw;
+  line-height: 1.5;
+  text-align: center;
+}
+
+#service .service_grid_container .service_grid .service_card .card_text.desktop {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#service .service_grid_container .service_grid .service_card .card_text.mobile {
+  display: none;
+}
+
+@media (max-width: 767.98px) {
+  #service {
+    background: #fff;
+  }
+  #service .section_title {
+    margin-bottom: 0.25vw;
+  }
+  #service .body_text p {
+    margin-bottom: 5vw;
+  }
+  #service .service_grid_container {
+    padding: 3.75vw 0;
+  }
+  #service .service_grid_container .service_grid {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-column-gap: 3.14vw;
+            column-gap: 3.14vw;
+    row-gap: 3.14vw;
+  }
+  #service .service_grid_container .service_grid .service_card {
+    height: 29vw;
+    width: 38.16vw;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: relative;
+  }
+  #service .service_grid_container .service_grid .service_card .card_pic {
+    width: 8.5vw !important;
+    height: 8.5vw !important;
+    margin: 3.623vw 0 1vw;
+  }
+  #service .service_grid_container .service_grid .service_card .card_text {
+    width: 100%;
+    font-size: 2.9vw;
+    position: absolute;
+    bottom: 35%;
+    -webkit-transform: translateY(50%);
+            transform: translateY(50%);
+  }
+  #service .service_grid_container .service_grid .service_card .card_text.desktop {
+    display: none;
+  }
+  #service .service_grid_container .service_grid .service_card .card_text.mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+#partner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10vw 0;
+}
+
+#partner .ourpartner_cards {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 3vw;
+}
+
+#partner .ourpartner_cards .partner_card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 5vw;
+  width: 16.5vw;
+  margin-right: 1.5vw;
+}
+
+@media (max-width: 767.98px) {
+  #partner {
+    padding: 21.5vw 0 12vw;
+  }
+  #partner .ourpartner_cards {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 10vw;
+  }
+  #partner .ourpartner_cards .partner_card {
+    height: 12vw;
+    width: 38vw;
+    margin-right: 3.865vw;
+    margin-bottom: 4.6vw;
+  }
+  #partner .ourpartner_cards .partner_card:nth-child(3) {
+    -webkit-box-ordinal-group: 5;
+        -ms-flex-order: 4;
+            order: 4;
+  }
+}
+
+#about_us {
+  position: relative;
+  text-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+  color: #fff;
+}
+
+#about_us img {
+  width: 100%;
+}
+
+#about_us img.mobile {
+  display: none;
+}
+
+#about_us p {
+  font-weight: bold;
+}
+
+#about_us p.mobile {
+  display: none;
+}
+
+#about_us .bg {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(108, 108, 108, 0.64);
+}
+
+@media (max-width: 767.98px) {
+  #about_us {
+    text-shadow: 0 1vw 1vw rgba(0, 0, 0, 0.25);
+    color: #fff;
+  }
+  #about_us .section_title {
+    font-size: 8.7vw;
+    font-weight: normal;
+  }
+  #about_us .body_text {
+    padding: 0 10.87vw;
+  }
+  #about_us .body_text p {
+    margin-bottom: 2vw;
+  }
+  #about_us .body_text p.desktop {
+    display: none;
+  }
+  #about_us .body_text p.mobile {
+    display: block;
+  }
+  #about_us .body_text p.sub_title {
+    font-size: 4.4vw;
+    margin-bottom: 10vw;
+  }
+  #about_us img {
+    width: 100%;
+  }
+  #about_us img.mobile {
+    display: block;
+  }
+  #about_us img.desktop {
+    display: none;
+  }
+  #about_us .bg {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: rgba(108, 108, 108, 0.64);
+  }
 }
 /*# sourceMappingURL=index.css.map */
