--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -5,3 +5,4 @@ $primary:#FF981F;
 $primary_alt1:#FF9314;
 $lightgrey:#E9E9E9;
 $input_background:rgba(233, 233, 233, 0.47);
+$query_tablet: '(max-width:767.98px)';
