--- a/static/css/master.css
+++ b/static/css/master.css
@@ -18,39 +18,14 @@
 
 @font-face {
   font-family: Noto Serif JP;
+  font-weight: 500;
+  src: url("../fonts/NotoSerifJP-Medium.otf") format("opentype");
+}
+
+@font-face {
+  font-family: Noto Serif JP;
   font-weight: bold;
   src: url("../fonts/NotoSerifJP-Bold.otf") format("opentype");
-}
-
-header .navbar {
-  background-color: #4F4F4F;
-  height: 6.3vw;
-  padding: 0;
-}
-
-header .navbar .logo {
-  font-family: Amiri;
-  font-weight: normal;
-  color: #fff;
-  text-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-header .navbar .logo .acronym {
-  font-size: 2.4vw;
-}
-
-header .navbar .logo .full_name {
-  font-size: 1.2vw;
 }
 
 html,
@@ -161,6 +136,7 @@ body {
   line-height: 1;
   font-family: Amiri;
   font-size: 1vw;
+  cursor: default;
 }
 
 ol,
@@ -187,10 +163,324 @@ table {
 }
 
 a {
-  color: #000;
+  color: #fff;
 }
 
 a:hover {
   text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+}
+
+header .search {
+  display: none;
+}
+
+header .navbar_toggler {
+  display: none;
+}
+
+header .navbar {
+  background-color: #4F4F4F;
+  height: 6.3vw;
+  padding: 0;
+  text-shadow: 0 0.25vw 0.25vw rgba(0, 0, 0, 0.25);
+  color: #fff;
+  font-size: 1.5vw;
+}
+
+header .navbar .logo {
+  font-family: Amiri;
+  font-weight: normal;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 6.3vw;
+  width: 20vw;
+}
+
+header .navbar .logo .acronym {
+  font-size: 2.4vw;
+}
+
+header .navbar .logo .full_name {
+  font-size: 1.2vw;
+}
+
+header .navbar .navbar-nav .nav-item {
+  height: 6.3vw;
+}
+
+header .navbar .navbar-nav .nav-item .nav-link {
+  padding: 0;
+  height: 100%;
+  width: 11.25vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+}
+
+header .navbar .navbar-nav .nav-item .nav-link .japanese {
+  font-size: .75vw;
+  font-family: Noto Serif JP;
+  margin-top: .5vw;
+}
+
+header .navbar .navbar-nav .nav-item .nav-link.contact_us_menu_item {
+  background-color: #FF9314;
+}
+
+header .navbar .navbar-nav .language {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header .navbar .navbar-nav .language .language_item {
+  width: 7vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+header .navbar .navbar-nav .language .language_item.en {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+header .navbar .navbar-nav .language .lang_separator {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 1.25vw;
+}
+
+@media (max-width: 767.98px) {
+  header {
+    min-height: 21.3vw;
+  }
+  header .search {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-left: 6.4vw;
+  }
+  header .search img {
+    width: 6.4vw;
+  }
+  header .navbar_toggler {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-right: 6.4vw;
+  }
+  header .navbar_toggler img {
+    width: 6.4vw;
+  }
+  header .navbar-collapse {
+    background: -webkit-gradient(linear, left top, left bottom, from(#4F4F4F), to(rgba(79, 79, 79, 0))) rgba(79, 79, 79, 0.75);
+    background: linear-gradient(#4F4F4F, rgba(79, 79, 79, 0)) rgba(79, 79, 79, 0.75);
+  }
+  header .navbar {
+    min-height: 21.3vw;
+    font-size: 4.8vw;
+  }
+  header .navbar .logo {
+    height: 21.3vw;
+    width: unset;
+  }
+  header .navbar .logo .acronym {
+    font-size: 6.4vw;
+  }
+  header .navbar .logo .full_name {
+    display: none;
+  }
+  header .navbar .navbar-nav .nav-item {
+    height: auto;
+  }
+  header .navbar .navbar-nav .nav-item .nav-link {
+    padding: 3vw 6.4vw;
+    width: 100%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .navbar .navbar-nav .nav-item .nav-link .japanese {
+    font-size: 2.5vw;
+    margin: 0 3vw;
+  }
+  header .navbar .navbar-nav .language {
+    padding: 3vw 6.4vw;
+  }
+  header .navbar .navbar-nav .language .language_item {
+    width: 7vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .navbar .navbar-nav .language .language_item.en {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: end;
+  }
+  header .navbar .navbar-nav .language .lang_separator {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 0 3vw;
+  }
+}
+
+footer {
+  padding: 4vw 4.5vw;
+  background: #4F4F4F;
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .footer_col_left .brand_name {
+  font-size: 2.5vw;
+  font-weight: bold;
+  margin-bottom: 1.75vw;
+}
+
+footer .footer_col_left .footer_left_item {
+  font-size: 1.5vw;
+  font-family: Noto Serif JP;
+  margin-bottom: 1.75vw;
+}
+
+footer .footer_col_right .footer_right_item {
+  font-family: Noto Serif JP;
+  font-size: 1.15vw;
+  line-height: 1.5;
+  margin-top: 1.5vw;
+}
+
+footer .footer_col_right .footer_right_item strong {
+  font-weight: bold;
+}
+
+@media (max-width: 767.98px) {
+  footer {
+    padding: 5vw 7vw 6vw 5.315vw;
+  }
+  footer .footer_col_left .brand_name {
+    font-size: 5.8vw;
+    font-weight: normal;
+    margin-bottom: 3vw;
+  }
+  footer .footer_col_left .footer_left_item {
+    font-size: 2.66vw;
+    margin-bottom: 3vw;
+  }
+  footer .footer_col_right .footer_right_item {
+    font-size: 2.175vw;
+    line-height: 1.65;
+    margin-top: 0;
+    margin-bottom: 2vw;
+  }
+}
+
+.cover_section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 30vw;
+}
+
+.cover_section .mobile_super_title {
+  display: none;
+}
+
+.cover_section .cover_gradient {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  height: 100%;
+}
+
+.cover_section .cover_gradient .page_title {
+  position: absolute;
+  bottom: 50%;
+  right: -8vw;
+  -webkit-transform: translateY(50%) rotate(-90deg);
+          transform: translateY(50%) rotate(-90deg);
+  font-size: 7.375vw;
+  font-weight: bold;
+  color: #FF981F;
+}
+
+.cover_section .cover_gradient img {
+  width: 100%;
+}
+
+.cover_section .cover_img img {
+  width: 70vw;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 /*# sourceMappingURL=master.css.map */
