--- a/static/css/master.scss
+++ b/static/css/master.scss
@@ -1,6 +1,5 @@
 @import './variables';
 @import './fonts';
-@import './header';
 html,
 body,
 div,
@@ -112,6 +111,7 @@ body {
     //
     font-family: Amiri;
     font-size: 1vw;
+    cursor: default;
 }
 
 ol,
@@ -138,8 +138,47 @@ table {
 }
 
 a {
-    color: $black;
+    color: $white;
     &:hover {
         text-decoration: none;
+        color: $white;
+        cursor: pointer;
+    }
+}
+
+@import './header';
+@import './footer';
+.cover_section {
+    display: flex;
+    justify-content: flex-end;
+    height: 30vw;
+    .mobile_super_title {
+        display: none;
+    }
+    .cover_gradient {
+        position: relative;
+        display: flex;
+        justify-content: flex-end;
+        height: 100%;
+        .page_title {
+            position: absolute;
+            bottom: 50%;
+            right: -8vw;
+            transform: translateY(50%) rotate(-90deg);
+            font-size: 7.375vw;
+            font-weight: bold;
+            color: $primary;
+        }
+        img {
+            width: 100%;
+        }
+    }
+    .cover_img {
+        img {
+            width: 70vw;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
     }
 }
